Fixed scaling issues on mobile

--- a/style.css
+++ b/style.css
@@ -27,6 +27,7 @@ body {
     display: flex;
     background-color: transparent;
     border: none;
+    height: 100%;
 }
 
 div {
